--- a/Bay Area Job Data Exploration.ipynb
+++ b/Bay Area Job Data Exploration.ipynb
@@ -497,90 +497,64 @@
     }
    ],
    "source": [
-    "skinny_bay_area= bay_area.drop(\"CPSID\",\"ASECFLAG\",\"HWTSUPP\", \"HFLAG\", \"MONTH\", \"PERNUM\", \"CPSIDP\",\"WTSUPP\")\n",
-    "skinny_bay_area"
+    "cut_bay_area= bay_area.drop(\"CPSID\",\"ASECFLAG\",\"HWTSUPP\", \"HFLAG\", \"MONTH\", \"PERNUM\", \"CPSIDP\",\"WTSUPP\")\n",
+    "cut_bay_area"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>YEAR</th> <th>SERIAL</th> <th>METAREA</th> <th>SEX</th> <th>RACE</th> <th>OCC2010</th> <th>INCTOT</th> <th>J</th> <th>B</th> <th>C</th> <th>T</th> <th>G</th> <th>R</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>2013</td> <td>92957 </td> <td>7365   </td> <td>1   </td> <td>100 </td> <td>9620   </td> <td>25000 </td> <td>O   </td> <td>    </td> <td>A   </td> <td>E   </td> <td>O   </td> <td>Y   </td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "        <tr>\n",
-       "            <td>2013</td> <td>92966 </td> <td>7365   </td> <td>1   </td> <td>100 </td> <td>220    </td> <td>74645 </td> <td>O   </td> <td>    </td> <td>A   </td> <td>E   </td> <td>O   </td> <td>Y   </td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "        <tr>\n",
-       "            <td>2013</td> <td>92966 </td> <td>7365   </td> <td>2   </td> <td>100 </td> <td>4110   </td> <td>6240  </td> <td>O   </td> <td>    </td> <td>A   </td> <td>E   </td> <td>O   </td> <td>Y   </td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "        <tr>\n",
-       "            <td>2013</td> <td>92967 </td> <td>7365   </td> <td>1   </td> <td>100 </td> <td>1050   </td> <td>0     </td> <td>O   </td> <td>    </td> <td>A   </td> <td>E   </td> <td>O   </td> <td>Y   </td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "        <tr>\n",
-       "            <td>2013</td> <td>92969 </td> <td>7365   </td> <td>1   </td> <td>100 </td> <td>1410   </td> <td>115421</td> <td>O   </td> <td>    </td> <td>A   </td> <td>E   </td> <td>O   </td> <td>Y   </td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "        <tr>\n",
-       "            <td>2013</td> <td>92970 </td> <td>7365   </td> <td>1   </td> <td>100 </td> <td>1020   </td> <td>117865</td> <td>O   </td> <td>    </td> <td>A   </td> <td>E   </td> <td>O   </td> <td>Y   </td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "        <tr>\n",
-       "            <td>2013</td> <td>92973 </td> <td>7365   </td> <td>1   </td> <td>100 </td> <td>4220   </td> <td>29017 </td> <td>O   </td> <td>    </td> <td>A   </td> <td>E   </td> <td>O   </td> <td>Y   </td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "        <tr>\n",
-       "            <td>2013</td> <td>92976 </td> <td>7365   </td> <td>2   </td> <td>651 </td> <td>350    </td> <td>130030</td> <td>O   </td> <td>    </td> <td>A   </td> <td>E   </td> <td>O   </td> <td>Y   </td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "        <tr>\n",
-       "            <td>2013</td> <td>92980 </td> <td>7365   </td> <td>2   </td> <td>651 </td> <td>720    </td> <td>571   </td> <td>O   </td> <td>    </td> <td>A   </td> <td>E   </td> <td>O   </td> <td>Y   </td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "        <tr>\n",
-       "            <td>2013</td> <td>92983 </td> <td>7365   </td> <td>1   </td> <td>100 </td> <td>9620   </td> <td>19825 </td> <td>O   </td> <td>    </td> <td>A   </td> <td>E   </td> <td>O   </td> <td>Y   </td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>\n",
-       "<p>... (2540 rows omitted)</p"
-      ],
-      "text/plain": [
-       "YEAR | SERIAL | METAREA | SEX  | RACE | OCC2010 | INCTOT | J    | B    | C    | T    | G    | R\n",
-       "2013 | 92957  | 7365    | 1    | 100  | 9620    | 25000  | O    |      | A    | E    | O    | Y\n",
-       "2013 | 92966  | 7365    | 1    | 100  | 220     | 74645  | O    |      | A    | E    | O    | Y\n",
-       "2013 | 92966  | 7365    | 2    | 100  | 4110    | 6240   | O    |      | A    | E    | O    | Y\n",
-       "2013 | 92967  | 7365    | 1    | 100  | 1050    | 0      | O    |      | A    | E    | O    | Y\n",
-       "2013 | 92969  | 7365    | 1    | 100  | 1410    | 115421 | O    |      | A    | E    | O    | Y\n",
-       "2013 | 92970  | 7365    | 1    | 100  | 1020    | 117865 | O    |      | A    | E    | O    | Y\n",
-       "2013 | 92973  | 7365    | 1    | 100  | 4220    | 29017  | O    |      | A    | E    | O    | Y\n",
-       "2013 | 92976  | 7365    | 2    | 651  | 350     | 130030 | O    |      | A    | E    | O    | Y\n",
-       "2013 | 92980  | 7365    | 2    | 651  | 720     | 571    | O    |      | A    | E    | O    | Y\n",
-       "2013 | 92983  | 7365    | 1    | 100  | 9620    | 19825  | O    |      | A    | E    | O    | Y\n",
-       "... (2540 rows omitted)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-ee511d9e496a>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-ee511d9e496a>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if x== 700, 1000, 1010, 1020, 1050, 1220, 1230, 1240, 1350, 1360, 1400, 1410, 1420, 1430,\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "skinny_bay_area.with_columns(\"JOB CATEGORY\", )"
+    "def job_categories(x): \n",
+    "    if x in [700, 1000, 1010, 1020, 1050, 1220, 1230, 1240, 1350, 1360, 1400, 1410, 1420, 1430,\n",
+    "    1450,1460, 1540, 1550, 1720, 1910, 1920, 1980,2840, 2900,7720, 7730, 7900, 8000, 8010,8030,\n",
+    "    8060, 8800, 8830]: \n",
+    "        return \"STEM\"\n",
+    "    elif x in [7700, 9620, 9630, 9640, 4000, 4010, 4030, 4050, 4060, 4110, 4120, 4130, 4140, 4150, 4720, \n",
+    "    7700,9620,9630,9640]:\n",
+    "        return \"SERVICE\"\n",
+    "    elif x in 120, 800, 820, 940, 950:\n",
+    "        return \"FINANCIAL\"\n",
+    "    elif x== 4200, 4210, 4220, 4230, 4250:\n",
+    "        return \"CUSTODIAL\"\n",
+    "    elif x== 130, 140, 150, 160, 220, 300, 10, 20, 30, 100, 330, 350 ,360, 410, 420, 1060, 1100:\n",
+    "        return \"MANAGEMENT\"\n",
+    "    else \n",
+    "        return \"UNKNOWN\"\n",
+    "   \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'job_categories' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-d4ce2fd81ed0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjob_categories\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcut_bay_area\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"OCC2010\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'job_categories' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "job_categories(cut_bay_area.column(\"OCC2010\"))"
    ]
   },
   {
