still working on extra column

--- a/Bay Area Job Data Exploration.ipynb
+++ b/Bay Area Job Data Exploration.ipynb
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
        "... (2540 rows omitted)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,18 +503,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-ee511d9e496a>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-ee511d9e496a>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if x== 700, 1000, 1010, 1020, 1050, 1220, 1230, 1240, 1350, 1360, 1400, 1410, 1420, 1430,\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def job_categories(x): \n",
     "    if x in [700, 1000, 1010, 1020, 1050, 1220, 1230, 1240, 1350, 1360, 1400, 1410, 1420, 1430,\n",
@@ -524,13 +515,13 @@
     "    elif x in [7700, 9620, 9630, 9640, 4000, 4010, 4030, 4050, 4060, 4110, 4120, 4130, 4140, 4150, 4720, \n",
     "    7700,9620,9630,9640]:\n",
     "        return \"SERVICE\"\n",
-    "    elif x in 120, 800, 820, 940, 950:\n",
+    "    elif x in [120, 800, 820, 940, 950]:\n",
     "        return \"FINANCIAL\"\n",
-    "    elif x== 4200, 4210, 4220, 4230, 4250:\n",
+    "    elif x in [4200, 4210, 4220, 4230, 4250]:\n",
     "        return \"CUSTODIAL\"\n",
-    "    elif x== 130, 140, 150, 160, 220, 300, 10, 20, 30, 100, 330, 350 ,360, 410, 420, 1060, 1100:\n",
+    "    elif x in [130, 140, 150, 160, 220, 300, 10, 20, 30, 100, 330, 350 ,360, 410, 420, 1060, 1100]:\n",
     "        return \"MANAGEMENT\"\n",
-    "    else \n",
+    "    else: \n",
     "        return \"UNKNOWN\"\n",
     "   \n",
     "    "
@@ -538,18 +529,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'job_categories' is not defined",
+     "evalue": "name 'a' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-d4ce2fd81ed0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjob_categories\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcut_bay_area\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"OCC2010\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'job_categories' is not defined"
+      "\u001b[0;32m<ipython-input-22-d4ce2fd81ed0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjob_categories\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcut_bay_area\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"OCC2010\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-20-2948acd92fd3>\u001b[0m in \u001b[0;36mjob_categories\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mjob_categories\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     if x in a.any[700, 1000, 1010, 1020, 1050, 1220, 1230, 1240, 1350, 1360, 1400, 1410, 1420, 1430,\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;36m1450\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1460\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1540\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1550\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1720\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1910\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1920\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1980\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2840\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2900\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7720\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7730\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7900\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8010\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8030\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     8060, 8800, 8830]: \n\u001b[1;32m      5\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m\"STEM\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
      ]
     }
    ],
