--- a/Bay Area Job Data Exploration.ipynb
+++ b/Bay Area Job Data Exploration.ipynb
@@ -22,7 +22,7 @@
    },
    "outputs": [],
    "source": [
-    "# no longer relevant\n",
+    "# SUJUDE RULES \n",
     "# old cleaning process to generate bay_area_data.csv\n",
     "# data = Table().read_table('data/cps_00002.csv')"
    ]
@@ -504,7 +504,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "STEM_codes= make_array(700, 1000, 1010, 1020, 1050, 1220, 1230, 1240, 1350, 1360, 1400, 1410, 1420, 1430,\n",
