--- a/bay_area-SJ.ipynb
+++ b/bay_area-SJ.ipynb
@@ -1572,13 +1572,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'iteritems'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-f10db733028b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'White'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m200\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"Black\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m300\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'Indigenous'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m650\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\"Asian Pacific Islander\"\u001b[0m \u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miteritems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mdict\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Other'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'iteritems'"
+     ]
+    }
+   ],
    "source": [
-    "#DICTIONARY HERE"
+    "dict = {100: 'White', 200: \"Black\", 300: 'Indigenous',650:\"Asian Pacific Islander\" }\n",
+    "for k, v in dict.iteritems():\n",
+    "    if v is None:\n",
+    "        dict [k] = 'Other'"
    ]
   },
   {
@@ -1884,170 +1897,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 59001.,  55135.,  55000.,  55000.,  56780.,  60009.,  60000.,\n",
-       "        55680.,  58825.,  55680.,  60000.,  58780.,  59883.,  60000.,\n",
-       "        60162.,  55300.,  60017.,  58825.,  60010.,  55000.,  58056.,\n",
-       "        55569.,  56261.,  60014.,  60001.,  58000.,  55135.,  57029.,\n",
-       "        55222.,  58500.,  56261.,  60000.,  55082.,  60148.,  55016.,\n",
-       "        60000.,  55586.,  59988.,  55569.,  58500.,  57219.,  55144.,\n",
-       "        56261.,  58000.,  55577.,  59099.,  53738.,  60000.,  60000.,\n",
-       "        60088.,  60018.,  55058.,  59883.,  55569.,  60000.,  59001.,\n",
-       "        55000.,  55300.,  55000.,  53750.,  55586.,  60000.,  57052.,\n",
-       "        55230.,  55000.,  60002.,  59959.,  56747.,  60000.,  60000.,\n",
-       "        60084.,  59883.,  60017.,  59959.,  60000.,  60000.,  51000.,\n",
-       "        60000.,  57219.,  55586.,  60000.,  58000.,  55135.,  59988.,\n",
-       "        58500.,  60000.,  60000.,  55215.,  55300.,  60000.,  55222.,\n",
-       "        55800.,  55586.,  60000.,  58000.,  60000.,  56747.,  55569.,\n",
-       "        60200.,  59883.,  60001.,  58000.,  55440.,  58895.,  57029.,\n",
-       "        59001.,  60002.,  59007.,  58780.,  55200.,  52245.,  55000.,\n",
-       "        57002.,  55569.,  59988.,  59001.,  55577.,  54100.,  58540.,\n",
-       "        60002.,  60000.,  58780.,  55000.,  58895.,  55144.,  58825.,\n",
-       "        55144.,  58825.,  58895.,  59001.,  60000.,  55215.,  60000.,\n",
-       "        57219.,  59099.,  57002.,  58000.,  60000.,  60000.,  60000.,\n",
-       "        52303.,  60150.,  55058.,  59988.,  55144.,  60000.,  60000.,\n",
-       "        52600.,  59959.,  57902.,  58825.,  55053.,  60000.,  57902.,\n",
-       "        60000.,  60629.,  55144.,  60009.,  60000.,  58540.,  55215.,\n",
-       "        55440.,  60017.,  60000.,  58825.,  60000.,  60000.,  58056.,\n",
-       "        55222.,  60000.,  60000.,  55144.,  60000.,  55800.,  59883.,\n",
-       "        55680.,  58825.,  53000.,  58825.,  60000.,  55006.,  60000.,\n",
-       "        60005.,  58000.,  55600.,  55058.,  60000.,  56780.,  54700.,\n",
-       "        58780.,  55680.,  57219.,  57219.,  58000.,  60000.,  55222.,\n",
-       "        55230.,  58780.,  60000.,  60000.,  50832.,  59007.,  56780.,\n",
-       "        60000.,  59959.,  57219.,  60000.,  56029.,  53750.,  55000.,\n",
-       "        55000.,  60025.,  57052.,  60203.,  60000.,  60000.,  60000.,\n",
-       "        60000.,  59959.,  60005.,  59001.,  55440.,  58825.,  55577.,\n",
-       "        55222.,  57902.,  55000.,  55300.,  60000.,  60000.,  58780.,\n",
-       "        53738.,  52600.,  55230.,  54700.,  60010.,  58540.,  59001.,\n",
-       "        60001.,  59883.,  55800.,  58500.,  58540.,  59007.,  60000.,\n",
-       "        57219.,  55222.,  55680.,  59988.,  55200.,  52245.,  54700.,\n",
-       "        60000.,  55016.,  55569.,  58500.,  57052.,  55586.,  56780.,\n",
-       "        60005.,  59988.,  60002.,  58540.,  52303.,  54111.,  57219.,\n",
-       "        60000.,  55230.,  55000.,  60000.,  55000.,  60000.,  55230.,\n",
-       "        59099.,  54400.,  55440.,  59007.,  57002.,  60000.,  59959.,\n",
-       "        55586.,  57219.,  55135.,  60000.,  55230.,  60000.,  59959.,\n",
-       "        55135.,  58000.,  60000.,  56261.,  60000.,  55230.,  60000.,\n",
-       "        55000.,  55135.,  55000.,  55000.,  55300.,  56261.,  59883.,\n",
-       "        60000.,  57219.,  55058.,  58000.,  55006.,  57902.,  60008.,\n",
-       "        56261.,  52245.,  56261.,  55577.,  60000.,  58825.,  60002.,\n",
-       "        60000.,  57052.,  55800.,  58000.,  58825.,  53750.,  60000.,\n",
-       "        60001.,  60148.,  57902.,  60010.,  58895.,  56261.,  55600.,\n",
-       "        60000.,  57029.,  56780.,  56747.,  60000.,  60248.,  57052.,\n",
-       "        60000.,  56029.,  60162.,  55200.,  60000.,  55000.,  55027.,\n",
-       "        53010.,  56747.,  53010.,  55000.,  55000.,  55230.,  59099.,\n",
-       "        60000.,  60000.,  60000.,  58500.,  55222.,  58000.,  60009.,\n",
-       "        58000.,  60000.,  60000.,  60103.,  55222.,  60000.,  60000.,\n",
-       "        60000.,  59099.,  60000.,  60002.,  55300.,  60000.,  59959.,\n",
-       "        60014.,  53738.,  60001.,  58500.,  58895.,  55600.,  56780.,\n",
-       "        60000.,  55053.,  55577.,  56780.,  54111.,  56029.,  55200.,\n",
-       "        56261.,  60084.,  55800.,  60000.,  56029.,  55000.,  59988.,\n",
-       "        59959.,  55000.,  58000.,  60001.,  60000.,  55016.,  52200.,\n",
-       "        55569.,  60002.,  55680.,  58895.,  55082.,  59099.,  55586.,\n",
-       "        58780.,  58895.,  60000.,  60150.,  58500.,  60000.,  56261.,\n",
-       "        53750.,  60005.,  59001.,  55600.,  59001.,  56747.,  60000.,\n",
-       "        55215.,  60000.,  55006.,  60008.,  57219.,  55569.,  55680.,\n",
-       "        55058.,  55600.,  60000.,  60000.,  57902.,  57052.,  60014.,\n",
-       "        53750.,  55000.,  60000.,  55577.,  60000.,  60000.,  52100.,\n",
-       "        56261.,  55440.,  55577.,  59007.,  60000.,  56780.,  60000.,\n",
-       "        55000.,  58000.,  58895.,  55027.,  56261.,  56029.,  56029.,\n",
-       "        55440.,  58056.,  55680.,  55440.,  60008.,  60014.,  51635.,\n",
-       "        60000.,  60000.,  57219.,  59988.,  60286.,  57219.,  55000.,\n",
-       "        55600.,  59099.,  55016.,  58000.,  55006.,  60005.,  57029.,\n",
-       "        60000.,  60000.,  60001.,  58540.,  56780.,  60000.,  55300.,\n",
-       "        57029.,  55200.,  60000.,  55300.,  59007.,  56029.,  55135.,\n",
-       "        59959.,  57219.,  55440.,  55082.,  54400.,  57902.,  58000.,\n",
-       "        60047.,  55058.,  60000.,  55135.,  59959.,  55800.,  58000.,\n",
-       "        55440.,  55230.,  60000.,  51000.,  55300.,  60000.,  60001.,\n",
-       "        56747.,  59883.,  55082.,  55053.,  57002.,  57029.,  59883.,\n",
-       "        56747.,  54700.,  60000.,  55440.,  53264.,  55200.,  60000.,\n",
-       "        60000.,  60200.,  55300.,  52245.,  55135.,  56029.,  55215.,\n",
-       "        57002.,  57902.,  55000.,  58825.,  55680.,  55000.,  55680.,\n",
-       "        59988.,  55082.,  59988.,  55000.,  59988.,  56261.,  60010.,\n",
-       "        55586.,  51808.,  55135.,  59007.,  59988.,  55600.,  58780.,\n",
-       "        55000.,  50300.,  60000.,  58000.,  53122.,  59099.,  55135.,\n",
-       "        52388.,  60000.,  59988.,  55053.,  55215.,  60241.,  60000.,\n",
-       "        52010.,  54400.,  60025.,  55440.,  57902.,  60000.,  60008.,\n",
-       "        60000.,  58540.,  60025.,  60000.,  60000.,  60000.,  55440.,\n",
-       "        60009.,  55222.,  55569.,  55058.,  57002.,  55058.,  57902.,\n",
-       "        60000.,  57052.,  55000.,  59959.,  60000.,  57902.,  60017.,\n",
-       "        60018.,  56747.,  55680.,  60576.,  55800.,  56780.,  60103.,\n",
-       "        60000.,  55440.,  55000.,  60000.,  51101.,  60241.,  55680.,\n",
-       "        55222.,  60001.,  57029.,  60000.,  58895.,  55058.,  55016.,\n",
-       "        60000.,  55600.,  55600.,  60001.,  58895.,  59883.,  59007.,\n",
-       "        55027.,  60002.,  60203.,  58056.,  55200.,  55440.,  60248.,\n",
-       "        60000.,  59883.,  55000.,  57902.,  60088.,  59007.,  55577.,\n",
-       "        57219.,  60000.,  58780.,  58500.,  60000.,  55440.,  57029.,\n",
-       "        58056.,  55027.,  57052.,  56780.,  59099.,  60010.,  55082.,\n",
-       "        55577.,  55000.,  58000.,  58895.,  57219.,  58825.,  55000.,\n",
-       "        60000.,  58895.,  55058.,  55200.,  55000.,  55006.,  60200.,\n",
-       "        60200.,  55600.,  55215.,  55000.,  60000.,  55569.,  60100.,\n",
-       "        60017.,  60000.,  55144.,  55569.,  55300.,  60100.,  55577.,\n",
-       "        60148.,  60000.,  56780.,  55000.,  58056.,  55000.,  60576.,\n",
-       "        55230.,  58540.,  60000.,  60000.,  55586.,  58056.,  57052.,\n",
-       "        57052.,  57902.,  59988.,  60005.,  60000.,  53264.,  55586.,\n",
-       "        58825.,  55000.,  55135.,  55144.,  56029.,  60000.,  59959.,\n",
-       "        60008.,  55000.,  60000.,  60000.,  55440.,  55800.,  55440.,\n",
-       "        60000.,  60000.,  58895.,  57052.,  55586.,  55586.,  57052.,\n",
-       "        60200.,  55000.,  54400.,  60000.,  55440.,  60025.,  56029.,\n",
-       "        55440.,  55058.,  55135.,  60014.,  57219.,  60100.,  59988.,\n",
-       "        57219.,  60001.,  58895.,  58500.,  53000.,  55680.,  60000.,\n",
-       "        60000.,  60014.,  58056.,  55230.,  58895.,  60001.,  57029.,\n",
-       "        55215.,  58500.,  59883.,  55586.,  55000.,  58540.,  59959.,\n",
-       "        53738.,  60000.,  60010.,  60200.,  55000.,  60084.,  56780.,\n",
-       "        55082.,  55300.,  59959.,  51400.,  55577.,  55569.,  59883.,\n",
-       "        55230.,  55600.,  55440.,  55000.,  60000.,  55144.,  59883.,\n",
-       "        60047.,  56261.,  58540.,  60000.,  56029.,  60000.,  58540.,\n",
-       "        50506.,  59001.,  60000.,  57002.,  56029.,  57029.,  60100.,\n",
-       "        58000.,  58056.,  55000.,  58780.,  58540.,  60000.,  58540.,\n",
-       "        57052.,  52600.,  54700.,  55800.,  56747.,  60241.,  55000.,\n",
-       "        60248.,  60000.,  55000.,  60000.,  55053.,  57902.,  60018.,\n",
-       "        54700.,  60000.,  55440.,  60000.,  60000.,  56780.,  55058.,\n",
-       "        58540.,  55058.,  56747.,  60150.,  55440.,  55300.,  55222.,\n",
-       "        60000.,  56261.,  55000.,  60000.,  55000.,  60000.,  60000.,\n",
-       "        53000.,  60010.,  58895.,  60088.,  60000.,  59007.,  58056.,\n",
-       "        58540.,  56261.,  59988.,  55222.,  55000.,  57002.,  55053.,\n",
-       "        60002.,  58895.,  57002.,  59007.,  58825.,  55082.,  58895.,\n",
-       "        60000.,  60000.,  57029.,  55300.,  60017.,  60000.,  55200.,\n",
-       "        55300.,  59883.,  55300.,  60000.,  60000.,  60000.,  58500.,\n",
-       "        55569.,  60103.,  57002.,  56780.,  55000.,  55586.,  56029.,\n",
-       "        60200.,  55000.,  60000.,  60000.,  58000.,  56780.,  57029.,\n",
-       "        57902.,  56261.,  60000.,  57002.,  55058.,  60040.,  59099.,\n",
-       "        55000.,  55000.,  60000.,  55800.,  57902.,  55215.,  55082.,\n",
-       "        56261.,  59883.,  55000.,  55215.,  55577.,  59959.,  53010.,\n",
-       "        60000.,  60200.,  56747.,  59001.,  58540.,  60200.,  60000.,\n",
-       "        55000.,  58056.,  54700.,  55800.,  57029.,  55000.,  55027.,\n",
-       "        56029.,  55000.,  55222.,  54700.,  60017.,  55144.,  55000.,\n",
-       "        60000.,  59099.,  57002.,  60009.,  60009.,  55000.,  60000.,\n",
-       "        60000.,  56029.,  55144.,  55800.,  60148.,  58780.,  55053.,\n",
-       "        55144.,  55222.,  58000.,  59883.,  60000.,  57002.,  55027.,\n",
-       "        58780.,  60018.,  55006.,  51020.,  55144.,  55440.,  55600.,\n",
-       "        60000.,  55680.,  59883.,  60000.,  54700.,  58000.,  53010.,\n",
-       "        58056.,  60103.,  55027.,  60000.,  55577.,  60040.,  59988.,\n",
-       "        59959.,  53010.,  57052.,  56261.,  60002.,  55200.,  55680.,\n",
-       "        55800.,  59001.,  55000.,  60000.,  58056.,  60485.,  55058.,\n",
-       "        57029.,  60000.,  53653.,  60150.,  55027.,  60000.,  60100.,\n",
-       "        60000.,  60005.,  57902.,  59001.,  55586.,  56029.,  55222.,\n",
-       "        58000.,  58895.,  60002.,  55000.,  57219.,  58500.])"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'bootstrap_median' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-78429f7ed81d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mall_income_medians\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mbootstrap_median\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwith_sector\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"INCTOT\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_income_medians\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'bootstrap_median' is not defined"
+     ]
     }
    ],
    "source": [
-    "bootstrap_median(with_sector, \"INCTOT\", 1000)"
+    "all_income_medians= bootstrap_median(with_sector, \"INCTOT\", 1000)\n",
+    "#all_income_interval="
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "men=with_sector.where(\"SEX\", are.equal_to(1))\n",
